--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "@types/bootstrap": "^5.2.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "vue": "^3.2.38",
