--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.2.1",
     "vue": "^3.2.38",
     "vue-loading-overlay": "^5.0.3",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
